fixed styles for ExtendableTextArea, so now it works fine with word overflows. Finished header for mobile screens.

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,8 @@
             #6ecaff,
             #396eff
     );
+
+    --breakpoint-mobile: 22rem;
 }
 
 @theme {
@@ -88,7 +90,7 @@
     }
 
     .mainContainer {
-        @apply w-full p-8 flex flex-col gap-5;
+        @apply w-full p-8 max-sm:p-5 flex flex-col gap-5 mb-20;
     }
 
     .container {
@@ -133,7 +135,7 @@
 
 
     .sidebar {
-        @apply flex sm:flex-col max-sm:grid max-sm:grid-cols-[auto_1fr]  items-center max-sm:items-stretch bg-white  w-auto h-screen border-r border-r-lightGray sticky top-0 left-0 max-sm:fixed max-sm:w-9/12 max-[350px]:w-7/12 max-sm:mx-auto max-sm:bg-lightestGray max-sm:shadow-xl max-sm:h-[72px] max-sm:top-auto max-sm:rounded-xl max-sm:overflow-hidden  max-sm:bottom-5 max-sm:left-2 ;
+        @apply flex sm:flex-col max-sm:grid max-sm:grid-cols-[auto_1fr] z-10  items-center max-sm:items-stretch bg-white  w-auto h-screen border-r border-r-lightGray sticky top-0 left-0 max-sm:fixed max-sm:w-9/12 max-[350px]:w-7/12 max-sm:mx-auto max-sm:bg-lightestGray max-sm:shadow-xl max-sm:h-[72px] max-sm:top-auto max-sm:rounded-xl max-sm:overflow-hidden  max-sm:bottom-5 max-sm:left-2 ;
 
 
         .colorStatusBar {
